# python-uv-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/design/: project-struct.md
scripts/: run.sh
